--- a/fileUploadModul/src/main/resources/application.properties
+++ b/fileUploadModul/src/main/resources/application.properties
@@ -37,5 +37,6 @@ fileUpload.path=file:/E:/fileUpload/
 config.defaultURL=http://${server.ip}:${server.port}/fileFolder/
 
 logging.path=E:/logfile/activiti
+logging.level.com.xieli.mapper=debug
 #com.yangyouqi: ${server.port}
 #spring.jmx.enabled=false
