--- a/fileUploadModul/src/main/resources/application.properties
+++ b/fileUploadModul/src/main/resources/application.properties
@@ -24,10 +24,10 @@ spring.datasource.username=xieli
 spring.datasource.password=123456
 
 #orcle
-#sspring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-#sspring.datasource.url=jdbc:oracle:thin:@10.88.3.158:1521:orcl
-#sspring.datasource.username=jxzb
-#sspring.datasource.password=123456
+#spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+#spring.datasource.url=jdbc:oracle:thin:@10.88.3.158:1521:orcl
+#spring.datasource.username=jxzb
+#spring.datasource.password=123456
 
 mybatis.mapperLocations=classpath:/mapper/*.xml
 
@@ -38,5 +38,6 @@ config.defaultURL=http://${server.ip}:${server.port}/fileFolder/
 
 logging.path=E:/logfile/activiti
 logging.level.com.xieli.mapper=debug
-#com.yangyouqi: ${server.port}
-#spring.jmx.enabled=false
+
+#pagehelper∑÷“≥≤Âº˛≈‰÷√ --oracle/mysql
+pagehelper.helperDialect=mysql
