--- a/fileUploadModul/src/main/resources/application.properties
+++ b/fileUploadModul/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 # url path
 server.port=8080
 server.ip=127.0.0.1
-#server.servlet.context-path=/shipin
+server.servlet.context-path=/
+server.servlet.name: FileuploadProject
 
 # thymeleaf
 spring.thymeleaf.prefix=classpath:/templates/
@@ -19,15 +20,15 @@ spring.servlet.multipart.max-file-size=500MB
 # 最大请求大小可以是mb也可以是kb
 spring.servlet.multipart.max-request-size=500MB
 #mysql
-spring.datasource.url=jdbc:mysql://localhost:3306/xielidatabase?useUnicode=true&characterEncoding=utf-8&useSSL=false
-spring.datasource.username=xieli
-spring.datasource.password=123456
+#spring.datasource.url=jdbc:mysql://localhost:3306/xielidatabase?useUnicode=true&characterEncoding=utf-8&useSSL=false
+#spring.datasource.username=xieli
+#spring.datasource.password=123456
 
 #orcle
-#spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-#spring.datasource.url=jdbc:oracle:thin:@10.88.3.158:1521:orcl
-#spring.datasource.username=jxzb
-#spring.datasource.password=123456
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+spring.datasource.url=jdbc:oracle:thin:@10.88.3.158:1521:orcl
+spring.datasource.username=jxzb2
+spring.datasource.password=123456
 
 mybatis.mapperLocations=classpath:/mapper/*.xml
 
@@ -36,8 +37,8 @@ mybatis.mapperLocations=classpath:/mapper/*.xml
 fileUpload.path=file:/E:/fileUpload/
 config.defaultURL=http://${server.ip}:${server.port}/fileFolder/
 
-logging.path=E:/logfile/activiti
+#logging.path=E:/logfile/activiti
 logging.level.com.xieli.mapper=debug
 
 #pagehelper分页插件配置 --oracle/mysql
-pagehelper.helperDialect=mysql
+pagehelper.helperDialect=oracle
